# XML-JSON-validator-tester

./: .dockerignore  Dockerfile  README.md  database.py  docker-compose.yml  init.sql  main_server.py  moc_data_gen.py  pyproject.toml  schemas.py  validator.xsl
My_modules/: pyproject.toml
My_modules/mocdatacreator/: CreateMOCDATA.c  CreateMOCDATA.pyx  pyproject.toml  setup.py
My_modules/txtfocumentparser/: data_parser.c  data_parser.pyx  pyproject.toml  setup.py
agents/: JSON_testing_agent.py  XML_testing_agent.py
