[project]
name = "xmlorjson"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cython>=3.2.0",
    "faker>=37.12.0",
    "fastapi>=0.121.1",
    "lxml>=6.0.2",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.4",
    "ruff>=0.14.4",
    "saxonche>=12.9.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.44",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]

[tool.uv.workspace]
members = [
    "MocData",
]
